Lesson-07/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
  labels:
    app: prometheus-server
spec:
  ports:
  - port: 9090
    protocol: TCP
  selector:
    app: prometheus-server
